--- a/Pages/page_3.html
+++ b/Pages/page_3.html
@@ -40,9 +40,6 @@
     </div>
 
     <div class="container">
-
-
-
         <div class="container-box">
             <h2>About me</h2>
 
@@ -63,22 +60,35 @@
                 nihil earum quis voluptatum quas doloribus consequatur in minus tenetur fuga id. Unde debitis
                 architecto perspiciatis modi.</h4>
         </div>
+
+        <div class="container-box image">
+            <img src="/Images/car1.jpg" alt="">
+        </div>
+
+        <div class="container-box image">
+            <img src="/Images/scenery.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="container-box">
+        <h2>What I do</h2>
     </div>
 
     <div class="container-grid">
+
         <div class="box-grid">
-            <img src="/Images/controller.png" alt="controller">
+            <img class="icon" src="/Images/controller.png" alt="controller">
             <h3>Gaming</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, quisquam.</p>
         </div>
         <div class="box-grid">
-            <img src="/Images/book-stack.png" alt="book stack">
+            <img class="icon" src="/Images/book-stack.png" alt="book stack">
             <h3>Reading Books</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non nam delectus provident sequi laudantium
                 tempora beatae laborum? Earum, dolore odit.</p>
         </div>
         <div class="box-grid">
-            <img src="/Images/origami.png" alt="origami bird">
+            <img class="icon" src="/Images/origami.png" alt="origami bird">
             <h3>Crafting</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero delectus quaerat temporibus sequi
                 quae praesentium.</p>
