--- a/Pages/page_5.html
+++ b/Pages/page_5.html
@@ -1,12 +1,14 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2120117 Assignment 2</title>
+    <title>simple login form</title>
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style5.css">
 </head>
-<body>
+
+<body style="background-color: #F8FAE5;">
 
     <div class="navbar">
         <div class="navButton">
@@ -36,6 +38,26 @@
         </div>
     </div>
 
-    
+    <div class="container">
+        <div class="flexbox" id="stickwala">
+            <div class="stick"></div>
+            <h1 id="bigtext">Want to Learn More? <br>Reach Us!</h1>
+        </div>
+        <div class="flexbox form">
+            <h1>Login</h1>
+            <hr>
+            <form action="">
+                <input type="text" id="uname" name="uame" placeholder="Username">
+                <br><br>
+                <input type="password" id="pwd" name="pwd" placeholder="Password">
+                <a href=""><h4>Forgot Password?</h4></a>
+                <input type="submit" value="Login">
+                <h4>Not a member? <a id="signupLink" href="">Signup</a></h4>
+            </form>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
