--- a/Pages/page_4.html
+++ b/Pages/page_4.html
@@ -36,6 +36,20 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="container-box image">
+            <img src="/Images/car8.jpg" alt="">
+        </div>
+        <div class="container-box image">
+            <img src="/Images/car7.jpg" alt="">
+        </div>
+
+        <div class="container-box">
+            <h1>The Porsche 911 GT3 RS</h1>
+            <h4>The Porsche 911 GT3 RS is a high-performance sports car that is purpose-built for maximum performance. It is a flagship athlete with motorsport in its DNA that takes full advantage of technology and concepts from motorsport[3]. The GT3 RS is a car that has been developed to make every second count, with the RS suffix standing for 'Rennsport' or 'racing sport'[2]. The car's design is characterized by the large number of functional aerodynamic elements, including the swan-neck-supported rear wing, which is significantly larger in all dimensions, and the front splitter that divides the air flowing over and underneath[3][4]. The GT3 RS is built with lightweight materials, including carbon fiber, which is used extensively throughout the car to reduce weight and improve performance[1]. The car's powerful engine, optimized suspension, and advanced aerodynamics make it a top performer on the racetrack, with impressive race track performance and unbridled euphoria[4]. The Porsche 911 GT3 RS is a significant car in the history of Porsche RS cars, and it continues to enthral car enthusiasts and racing fans alike[5].</h4>
+        </div>
+    </div>
+
     
 </body>
 </html>
